# ChangeLog for gnome-extra/gcalctool
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gcalctool/ChangeLog,v 1.167 2008/11/29 12:08:56 eva Exp $

*gcalctool-5.24.2 (29 Nov 2008)

  29 Nov 2008; Gilles Dartiguelongue <eva@gentoo.org>
  -gcalctool-5.22.1.ebuild, -gcalctool-5.22.2.ebuild,
  -gcalctool-5.24.0.ebuild, +gcalctool-5.24.2.ebuild:
  Bump to 5.24.2. Reenable trigonometric types. clean up old revisions.

  13 Nov 2008; Brent Baude <ranger@gentoo.org> gcalctool-5.22.3.ebuild:
  Marking gcalctool-5.22.3 ppc64 stable for bug 236971

*gcalctool-5.24.1 (19 Oct 2008)

  19 Oct 2008; Mart Raudsepp <leio@gentoo.org> +gcalctool-5.24.1.ebuild:
  New version; only update bit panel when display contains a solved number;
  translation updates

*gcalctool-5.24.0 (06 Oct 2008)

  06 Oct 2008; Mart Raudsepp <leio@gentoo.org> +gcalctool-5.24.0.ebuild:
  New version. Various bug fixes, improvements and code cleanups

  25 Sep 2008; Jeroen Roovers <jer@gentoo.org> gcalctool-5.22.3.ebuild:
  Stable for HPPA (bug #236971).

  12 Aug 2008; Raúl Porcel <armin76@gentoo.org> gcalctool-5.22.3.ebuild:
  alpha/ia64/sparc stable wrt #229709

  10 Aug 2008; Markus Meier <maekke@gentoo.org> gcalctool-5.22.3.ebuild:
  x86 stable, bug #229709

  30 Jul 2008; Brent Baude <ranger@gentoo.org> gcalctool-5.22.3.ebuild:
  Marking gcalctool-5.22.3 ppc stable for bug 229709

  26 Jul 2008; Olivier Crête <tester@gentoo.org> gcalctool-5.22.3.ebuild:
  Stable on amd64, bug #229709

*gcalctool-5.22.3 (30 Jun 2008)

  30 Jun 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +gcalctool-5.22.3.ebuild:
  bump to 5.22.3. Translation update and bug fix.

*gcalctool-5.22.2 (01 Jun 2008)

  01 Jun 2008; Mart Raudsepp <leio@gentoo.org>
  -files/gcalctool-5.8.25-hex-float.patch,
  -files/gcalctool-5.9.14-gtk+-2.12.0-compat.patch,
  -gcalctool-5.9.14.ebuild, -gcalctool-5.9.14-r1.ebuild,
  -gcalctool-5.22.0.ebuild, +gcalctool-5.22.2.ebuild: