@@ -1,8 +1,6 @@
 DIST gcalctool-5.22.3.tar.bz2 1495748 RMD160 c32ecb6f79cb0e9b208d937714b4cd0ca9d2fa10 SHA1 39519e851fd58d614aef72b7661ff25b052ef4f2 SHA256 ef61430800f5e286d448d232d3ddd6205c18de4800bd5c4c2231d6bfd963b6fe
-DIST gcalctool-5.24.1.tar.bz2 1714708 RMD160 c171b3fd77c62c976c99c9962d50220b5f54f07d SHA1 fca4070121f005cfff7e16407e6eec63ca59c80f SHA256 5e5b9de889fe2795625cdead6a7d57f635307d99d47e777cb854936d7b743a4b
-DIST gcalctool-5.24.2.tar.bz2 1694083 RMD160 fccf4f98e4bc93d6b7cad27c6202ced69dbf45bf SHA1 dee1645bb8feebf6b9f678f1f7167cfd4fb24396 SHA256 65e4c2cf4e83ca231d971e182cf8c7f6277411a76c2b0f6a72d089892522a255
+DIST gcalctool-5.24.3.tar.bz2 1806208 RMD160 4278245aca11f9ccf8b7111939a6fb6a22ae9065 SHA1 b29b43cc01af99b9f60aedcc13e6ca47c77104b0 SHA256 cad50dcd9a31f8cb75bf3b45c3d9a91d5673eb365af0960ec372103afd56f587
 EBUILD gcalctool-5.22.3.ebuild 792 RMD160 ff49bdf3006b0252a8ddcd7e3b3f1b4ecf2671c8 SHA1 7c93bca593a87bda74f05ab459e4786cb770e671 SHA256 4313b7984838ff8e2d1aab327ad91fd618ee60ada906dd8f5de4efc0b5937e37
-EBUILD gcalctool-5.24.1.ebuild 790 RMD160 6cf6a862bbef8b3d0a3ec25a6bcea75950a4e5a3 SHA1 5193bf81c52282771c17b5006e8ae2ac4c41311f SHA256 0bbc7c7dd755954e5e99927d57a31df9e462cc4cad31f5f255ba5e9e943eb480
-EBUILD gcalctool-5.24.2.ebuild 789 RMD160 0ccc572526833290b716088638fbec3d1c524f99 SHA1 09d5cb0cd7714bd9c10e7406141f8ad0cc8bf934 SHA256 f8f869d035b723df5adb069eecbf6d515303b1bfa19eb1bc47931a78df93c3df
-MISC ChangeLog 20619 RMD160 d2b5ed2a35727c3d5e2bcf8256676c2b0b45807e SHA1 ad29aae072d96355b3436b6041fd6b008b5f08e5 SHA256 37c2c76404854d6e45c23aa0abbd4b6d7fd16f0f0b3261cf889ce33dde4ebf93
+EBUILD gcalctool-5.24.3.ebuild 790 RMD160 0920d5d2d0895fdce010b935d944c84c70580cd6 SHA1 9e64b1c4531ccb76d58cb3b9f691cee190c0a414 SHA256 54a841d659b50e4d9510b31b9deb833d354209fde77ca01b130889d1ed51949b
+MISC ChangeLog 20872 RMD160 7b89872047991306b4ad1cb15abbc5e07d718262 SHA1 8a85e80d1f79ff6d45e1488b7bd690eb592b7494 SHA256 7e83cad4b7a6e99721344e350b66e8dd1794175a2c2c785fd6538aaae10f2613
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
