@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gcalctool/gcalctool-5.24.2.ebuild,v 1.1 2008/11/29 12:08:56 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gcalctool/gcalctool-5.24.3.ebuild,v 1.1 2009/01/18 23:40:24 leio Exp $
 
 EAPI="prefix"
 
